blink/canvas2d: Don't auto-flush GrContext on mac.

This seems to result in corrupt rendering on some mac devices due to
driver issues.

R=junov@chromium.org

Bug: 841755
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I8a74c0634f14f8e7f18a76243e013a47f39cee27
Reviewed-on: https://chromium-review.googlesource.com/1059863
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Justin Novosad <junov@chromium.org>
Commit-Queue: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560131}
Former-commit-id: 2c5e4691552d261a2040296b6ddd48be611333b2